Fix repo info not showing in mobile on click (caused by event.originalTarget === undefined)

--- a/css/appWindow.css
+++ b/css/appWindow.css
@@ -85,7 +85,7 @@ h1 {
 
 .repo {
     display: block;
-    margin-bottom: 4px;
+    margin-bottom: 8px;
 }
 
 .repo-hyperlink {
